feature display name for jwt token and classes api
